--- a/app/views/index.njk
+++ b/app/views/index.njk
@@ -82,10 +82,8 @@
         <ul class="govuk-list govuk-list--bullet">
         <li><a class="govuk-link" href="https://producer-responsibility-app-012da4a3b6d9.herokuapp.com/">Producers</li>
         <li><a class="govuk-link" href="https://regulator-responsibility-app-359d82a07820.herokuapp.com/">Regulators</a></li>
-        <li><a class="govuk-link" href="https://admin-responsibility-prototype-2dad26118a14.herokuapp.com/">PackUK</a></li>
-        <li><a class="govuk-link" href="#">FSS</a></li>
-        <li><a class="govuk-link" href="#">LAPS</a></li>
-        <li><a class="govuk-link" href="#">ReEx</a></li>
+        <li><a class="govuk-link" href="https://admin-responsibility-prototype-2dad26118a14.herokuapp.com/">Scheme administrator</a></li>
+
         
       
       </ul>
