--- a/app/views/baseline/paycal-dashboard.njk
+++ b/app/views/baseline/paycal-dashboard.njk
@@ -7,96 +7,84 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-2">Calculate packaging payments</h1>
+<div class="dashboard-page">  
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-1 ">Calculate packaging payments</h1>
     <div class="govuk-hint govuk-!-margin-bottom-6">
       Set up and run packaging payment calculations, and view past runs by financial year.
     </div>
     {# Admin management tiles #}
     {% include version ~ "/_includes/admin-tiles.njk" %}
     
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h2 class="govuk-heading-l govuk-!-margin-top-8 govuk-!-margin-bottom-0">Calculation runs</h2>
-      <p class="govuk-body-s">View and select a calculation run. You can also filter by financial year to find
-        previous runs.</p>
-    </div>
-    <div class="govuk-grid-column-one-third">
-      <div class="govuk-form-group" style="float: right;">
-        <label class="govuk-label govuk-!-margin-top-6">
-          Select a financial year
-        </label>
-        <select class="govuk-select" id="sort" name="sort">
-          <option value="published" selected="">2024-25</option>
-          <option value="updated">2023-24</option>
-          <option value="updated">2022-23</option>
-          <option value="updated">2021-22</option>
-        </select>
+    <div class="govuk-grid-row header-container">
+      <div class="govuk-grid-column-two-third caption-text">
+          <h2 class="govuk-heading-l govuk-!-margin-top-3 govuk-!-margin-bottom-0">Calculation runs</h2>
+          <p class="govuk-body-s">View and select a calculation run. You can also filter by financial year to find previous runs.</p>
+      </div>
+      <div class="govuk-grid-column-one-third filter-container">
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="financial-year-list">
+            Select a financial year
+          </label>
+          <select class="govuk-select" data-val="true" data-val-required="The FinancialYear field is required." id="financial-year-list" name="FinancialYear"><option selected="selected" value="2025-26">2025-26</option>
+            <option value="2024-25">2024-25</option>
+            <option value="2023-24">2023-24</option>
+          </select>
+        </div>
       </div>
     </div>
+    {% from "../" + version + "/_components/_calculation-row.njk" import calculationRow %}
+  <div id="calculation-runs">
+    <dl class="govuk-summary-list">
+
+      {{ calculationRow({
+        title: "Current test R16",
+        href: "",
+        calculationId: "251121",
+        runDate: "21 Nov 2025 at 17:00",
+        runBy: "Jamie Roberts",
+        tagColour: "green",
+        tagText: "Running"
+      }) }}
+
+      {{ calculationRow({
+        title: "Unclassified run R16",
+        href: "./runs/run-details?calcRun=unclassified",
+        calculationId: "251120",
+        runDate: "20 Nov 2025 at 16:17",
+        runBy: "Jamie Roberts"
+      }) }}
+
+      {{ calculationRow({
+        title: "Initial classified run R16",
+        href: "./runs/run-details?calcRun=initialRun",
+        calculationId: "251120",
+        runDate: "20 Nov 2025 at 16:17",
+        runBy: "Jamie Roberts",
+        tagColour: "purple",
+        tagText: "Initial run classified"
+      }) }}
+
+      {{ calculationRow({
+        title: "Error incomplete run R16",
+        href: "./runs/run-error?calcRun=runError",
+        calculationId: "251120",
+        runDate: "20 Nov 2025 at 16:17",
+        runBy: "Jamie Roberts",
+        tagColour: "red",
+        tagText: "Error"
+      }) }}
+
+      {{ calculationRow({
+        title: "Test classified run R16",
+        href: "./runs/run-details?calcRun=testRun",
+        calculationId: "251115",
+        runDate: "15 Nov 2025 at 12:17",
+        runBy: "Jamie Roberts",
+        tagColour: "yellow",
+        tagText: "Test run"
+      }) }}
+
+    </dl>
   </div>
-  {% from "../" + version + "/_components/_calculation-row.njk" import calculationRow %}
-
-    <table class="govuk-table govuk-table--m ">
-      <tr class="govuk-table__row">
-          <th scope="col" class="govuk-table__header"></th>
-          <th scope="col" class="govuk-table__header"></th>
-          <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
-        </tr>
-
-      <tbody class="govuk-table__body">
-
-        {{ calculationRow({
-          title: "Current test R16",
-          href: "",
-          calculationId: "251121",
-          runDate: "21 Nov 2025 at 17:00",
-          runBy: "Jamie Roberts",
-          tagColour: "green",
-          tagText: "Running"
-        }) }}
-
-        {{ calculationRow({
-          title: "Unclassified run R16",
-          href: "./runs/run-details?calcRun=unclassified",
-          calculationId: "251120",
-          runDate: "20 Nov 2025 at 16:17",
-          runBy: "Jamie Roberts"
-        }) }}
-
-        {{ calculationRow({
-          title: "Initial classified run R16",
-          href: "./runs/run-details?calcRun=initialRun",
-          calculationId: "251120",
-          runDate: "20 Nov 2025 at 16:17",
-          runBy: "Jamie Roberts",
-          tagColour: "purple",
-          tagText: "Initial run classified"
-        }) }}
-
-         {{ calculationRow({
-          title: "Error incomplete run R16",
-          href: "./runs/run-error?calcRun=runError",
-          calculationId: "251120",
-          runDate: "20 Nov 2025 at 16:17",
-          runBy: "Jamie Roberts",
-          tagColour: "red",
-          tagText: "Error"
-        }) }}
-
-        {{ calculationRow({
-          title: "Test classified run R16",
-          href: "./runs/run-details?calcRun=testRun",
-          calculationId: "251115",
-          runDate: "15 Nov 2025 at 12:17",
-          runBy: "Jamie Roberts",
-          tagColour: "yellow",
-          tagText: "Test run"
-        }) }}
-
-        
-
-      </tbody>
-    </table>
-
-
+</div>
 {% endblock %}
