added CPR prototype link and margin to H1 on index page

--- a/app/views/index.njk
+++ b/app/views/index.njk
@@ -11,7 +11,9 @@
 {% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full govuk-!-margin-top-6">
     <h1 class="govuk-heading-xl">pEPR Scheme administrator service prototype</h1>
+    </div>
     <div class="govuk-grid-column-two-thirds">
       <div class="index__container">
         <h2 class="govuk-heading-m">
@@ -83,7 +85,7 @@
         <li><a class="govuk-link" href="https://producer-responsibility-app-012da4a3b6d9.herokuapp.com/">Producers</li>
         <li><a class="govuk-link" href="https://regulator-responsibility-app-359d82a07820.herokuapp.com/">Regulators</a></li>
         <li><a class="govuk-link" href="https://admin-responsibility-prototype-2dad26118a14.herokuapp.com/">Scheme administrator</a></li>
-
+        <li><a class="govuk-link" href="https://defra-cpr-prototype.herokuapp.com/">CPR prototype (all EPR)</a></li>
         
       
       </ul>
